@@ -1,3 +1,7 @@
+2011-10-23  Valentin Hilbig  <tino@noir.03.softkill.org>
+
+	* unbuffered.c (main, unbuffered): option -b as bugfix for -c
+
 2011-10-22  Valentin Hilbig  <tino@noir.03.softkill.org>
 
 	* unbuffered.c (unbuffered, main): fd_in and fd_out (option -i/o)
